fit_predictor/mkp_aco/evaluates/run12/2025-01-26_13-29-34/coevolve/generation_0/stdout_0.txt
Traceback (most recent call last):
  File "E:\Projects\CO\reevo-main/problems/mkp_aco/eval.py", line 8, in <module>
    import gpt
  File "E:\Projects\CO\reevo-main\problems\mkp_aco\gpt.py", line 12
    scaled_heuristics = relative_value * relative_value.max() + np.random.normal scale=0.01, size=prize.shape[0]
                                                                                 ^^^^^
SyntaxError: invalid syntax
